--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@
             	<!-- TITLE -->
             	<div class="row">
                 	<div id="gallery2_title" class="col-md-12 text-center the_title animation fadeInUp">
-                    	<h2 class="margin0 padding0">PHOTO GALLERY</h2>
-                        <span class="margin0 padding0 sub_title">OUR MOMENT</span>
+                    	<h2 class="margin0 padding0">ÁLBUM DE FOTOS</h2>
+                        <span class="margin0 padding0 sub_title">NOSSOS MOMENTOS</span>
                     </div>
                     <div class="col-md-offset-1"></div>
                     <div id="gallery2_intro" class="col-md-10 col-md-offset-1 text-center animation delay1 fadeInUp">
                         <span class="glyphicon glyphicon-heart intro_heart"></span>
-                        <span class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam rhoncus, leo at pretium commodo, dui ipsum tristique dolor, in ullamcorper tellus velit quis nisl. In placerat volutpat elit quis dictum. Ut id sem nec mauris lacinia rhoncus.</span>
+                        <span class="intro">Momentos especiais para nós que gostariamos de relembrar e compartilhar com vocês antes do casamento, para que todos fiquem com nossa história de amor fresca na memória.</span>
                     </div>
                 </div><!-- END TITLE -->
                 
