--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
         <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
         <!-- Theme CSS -->
     	<link href="css/style.css" rel="stylesheet" media="screen">
-        <!-- Skin CSS - Create alternate theme color. Just remove the comment tag from the css below -->
-    	<!-- <link href="css/skin/pink.css" rel="stylesheet" media="screen"> -->
-        <!-- <link href="css/skin/purple.css" rel="stylesheet" media="screen"> -->
-        <!-- <link href="css/skin/brown.css" rel="stylesheet" media="screen"> -->
         
         <!--[if IE 9]>
         <style>
@@ -138,7 +134,7 @@
                     	<div class="photo_item">
                         	<div class="photo_item_preview">
                             	<a href="#">
-                                	<img src="/images/fotos/DSCN2304.JPG" alt="">
+                                	<img src="/images/fotos/DSCN2304.jpg" alt="">
                                 </a>
                            		<div class="photo_item_overlay">
                             		<a class="popup" href="him.html">
@@ -175,7 +171,7 @@
                     	<div class="photo_item">
                         	<div class="photo_item_preview">
                             	<a href="#">
-                                	<img src="/images/fotos/DSCN0845.JPG" alt="">
+                                	<img src="/images/fotos/DSCN0845.jpg" alt="">
                                 </a>
                            		<div class="photo_item_overlay">
                             		<a class="popup" href="her.html">
