--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      	<meta content="width=device-width, initial-scale=1.0" name="viewport">
      	<meta name="description" content="LUV - Responsive One Page HTML Wedding Template" >
       	<meta name="author" content="www.dethemes.com">
-      	<title>LUV - Responsive One Page HTML Wedding Template</title>
+      	<title>Rafael + Jéssica</title>
         <!-- Bootstrap -->
     	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" type="text/css" media="screen" />
         <!-- Supersized -->
@@ -319,10 +319,10 @@
                     			<div class="photo_item">
                         			<div class="photo_item_preview">
                             			<a href="#">
-                                			<img src="http://placehold.it/355x355" alt="">
+                                			<img src="images/fotos/DSCN0817.jpg" alt="Malibu">
                                 		</a>
                            				<div class="photo_item_overlay">
-                            				<a href="http://placehold.it/600x339">
+                            				<a href="images/fotos/DSCN0817.jpg">
                                     			<span class="icon_background"></span>
                                     			<span class="glyphicon glyphicon-zoom-in icon_button"></span>
                                    			</a>
