--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                             </div>
                             <div class="box_text">
                             	<p>Para quem não quer se preocupar em dirigir, disponibilizamos um contato para <strong>locação de vans</strong>.</p>
-                                <p>E-mail: conceicao.flausino@hotmail.com<br />R$: 50,00 por pessoa (Valores pagos diretamente a empresa)</p>
+                                <p>E-mail: conceicao.flauzino@hotmail.com<br />R$: 50,00 por pessoa (Valores pagos diretamente a empresa)</p>
                                 <p><strong>Valet no local</strong> (cortesia dos noivos)</p>
                             </div>
                     	</div>
