--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 							<span class="glyphicon glyphicon-heart"></span>
 						</div>
 						<div id="slide_text">
-                            <span id="slide_text1">WE ARE</span><br>
-                            <span id="slide_text2">GETTING</span><br>
-                            <span id="slide_text3" >MARRIED</span><br>
+                            <span id="slide_text1">VAMOS</span><br>
+                            <span id="slide_text2">NOS</span><br>
+                            <span id="slide_text3" >CASAR</span><br>
                             <div id="slide_text4">
                             	11<span class="glyphicon glyphicon-heart"></span>04<span class="glyphicon glyphicon-heart"></span>15
                             </div>
