--- a/index.html
+++ b/index.html
@@ -359,20 +359,20 @@
                         <div class="col-md-6">
                             <div class="col-md-12">
                                 <div id="fullname" class="form-group">
-                                    <label for="inputname">*NOME COMPLETO</label>
-                                    <input type="text" class="form-control" id="inputNome0" placeholder="">
+                                    <label for="inputNome0">*NOME COMPLETO</label>
+                                    <input type="text" class="form-control" id="inputNome0" name="inputNome0" placeholder="">
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div id="email" class="form-group">
-                                    <label for="inputemail">*EMAIL</label>
-                                    <input type="email" class="form-control" id="inputEmail0" placeholder="">
+                                    <label for="inputEmail0">*EMAIL</label>
+                                    <input type="email" class="form-control" id="inputEmail0" name="inputEmail0" placeholder="">
                                 </div>
                             </div>
                             <div class="sapato">
                                 <div class="col-md-6">
                                     <div id="fullname" class="form-group">
-                                        <label for="inputname">*SEXO</label>
+                                        <label for="selectSapato0">*SEXO</label>
                                         <select class="form-control" id="selectSapato0" ref="0">
                                             <option value="0">--Selecione--</option>
                                             <option value="m">Masculino</option>
@@ -382,8 +382,8 @@
                                 </div>
                                 <div class="col-md-6 hidden" id="divNumeroSapato0">
                                     <div id="fullname" class="form-group">
-                                        <label for="inputname">NÚMERO DO SAPATO</label>
-                                        <input type="text" class="form-control" id="inputSapato0" placeholder="">
+                                        <label for="inputSapato0">NÚMERO DO SAPATO</label>
+                                        <input type="text" class="form-control" id="inputSapato0" name="inputSapato0" placeholder="">
                                     </div>
                                 </div>
                             </div>
@@ -395,7 +395,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="inputmessage">DEIXE SUA MENSAGEM</label>
-                                <textarea id="inputmessage" class="form-control" rows="11"></textarea>
+                                <textarea id="inputmessage" name="inputmessage" class="form-control" rows="11"></textarea>
                             </div>
                         </div>
                         <div class="col-md-12 text-center">
