Frase para presente de lua de mel

--- a/index.html
+++ b/index.html
@@ -478,6 +478,7 @@
                                 <span class="box_title">Cotas de Lua de mel</span>
                             </div>
                             <div class="box_text">
+                                <p>Nós adoraríamos ser presenteados com uma experiência em nossa lua de mel para <strong>França</strong> e <strong>Grécia</strong> </p>
                                 <p>Caso deseje nos presentear com uma experiência em nossa <strong>Lua de mel</strong>, por favor, selecione abaixo o item desejado</p>
                             </div>
                         </div>
