adicionando tarifa do pedagio

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             <div class="box_text">
                             	<p>Para quem não quiser se preocupar em dirigir, disponibilizamos um contato para <strong>locação de vans</strong>.</p>
                                 <p>E-mail: conceicao.flauzino@hotmail.com<br />R$: 50,00 por pessoa (Valores pagos diretamente a empresa)</p>
-                                <p><strong>Valet no local</strong> (cortesia dos noivos)</p>
+                                <p><strong>Valet no local</strong> (cortesia dos noivos) <br /> <strong>Pedágio</strong>: R$2,70 (nos dois sentidos)</p>
                             </div>
                     	</div>
                     </div>
