--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     			<span class="box_title">HORÁRIO</span>
                             </div>
                             <div class="box_text">
-                                <p>Teremos o prazer de recebe-los às <strong>17:00h</strong> com comes e bebes em uma ilha de recepção.</p><p>Às <strong>17:30h</strong> será dado inínico a cerimônia.</p>
+                                <p>Teremos o prazer de recebe-los às <strong>17:00h</strong> com comes e bebes em uma ilha de recepção.</p><p>Às <strong>17:30h</strong> será dado início a cerimônia.</p>
                                 <br />
                                 <p>
                                     O tempo médio de viagem ao local varia entre <strong>1:00h</strong> e <strong>1:30h</strong>, dependendo do trânsito em São Paulo.
@@ -355,7 +355,7 @@
                     <div class="col-md-offset-1"></div>
                     <div id="rsvp_intro" class="col-md-10 col-md-offset-1 text-center animation delay1 fadeInUp">
                         <span class="glyphicon glyphicon-heart intro_heart"></span>
-                        <span class="intro">Por favor, confirme com antecedência sua presença e a de seu acompanhante em nossa festa. Para nós, é muito importante saber que você estará presente, afinal, tudo está sendo preparado com muito carinho para cada um. <br /> <br /> Basta preencher o formulário abaixo:</span>
+                        <span class="intro">Por favor, confirme com antecedência sua presença e a de seu acompanhante em nossa festa. Para nós, é muito importante saber que você estará presente, afinal, tudo está sendo preparado com muito carinho para cada um. <br /> <br /> Basta preencher o formulário abaixo:<br/> (Crianças maiores de 06 anos devem ser confirmadas)</span>
                     </div>
                 </div><!-- END TITLE -->
                 <!-- FORM -->
@@ -449,6 +449,18 @@
                         <div class="box animation fadeInLeft">
                             <div>
                                 <span class="glyphicon glyphicon-gift box_icon"></span>
+                                <span class="box_title">Cotas de Lua de mel</span>
+                            </div>
+                            <div class="box_text">
+                                <p>Nós adoraríamos ser presenteados com uma experiência em nossa lua de mel para <strong>França</strong> e <strong>Grécia</strong> </p>
+                                <p>Caso deseje nos presentear com uma experiência em nossa <strong>Lua de mel</strong>, por favor, selecione abaixo o item desejado</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="box animation fadeInLeft">
+                            <div>
+                                <span class="glyphicon glyphicon-gift box_icon"></span>
                                 <span class="box_title">Ponto Frio</span>
                             </div>
                             <div class="box_text">
@@ -471,18 +483,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="box animation fadeInLeft">
-                            <div>
-                                <span class="glyphicon glyphicon-gift box_icon"></span>
-                                <span class="box_title">Cotas de Lua de mel</span>
-                            </div>
-                            <div class="box_text">
-                                <p>Nós adoraríamos ser presenteados com uma experiência em nossa lua de mel para <strong>França</strong> e <strong>Grécia</strong> </p>
-                                <p>Caso deseje nos presentear com uma experiência em nossa <strong>Lua de mel</strong>, por favor, selecione abaixo o item desejado</p>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
                 <div class="row"><br /></div>
                 <!-- LOGO SLIDE -->
