Alteracao de Email Van e informações sobre hotel

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
      	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-     	<meta name="description" content="LUV - Responsive One Page HTML Wedding Template" >
-      	<meta name="author" content="www.dethemes.com">
+     	<meta name="description" content="#CASAMENTORAFAEJESS" >
+      	<meta name="author" content="RAFAEL E JESSICA">
       	<title>Rafael + Jéssica</title>
         <!-- Bootstrap -->
     	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" type="text/css" media="screen" />
@@ -262,7 +262,7 @@
                             </div>
                             <div class="box_text">
                             	<p>Para quem não quiser se preocupar em dirigir, disponibilizamos um contato para <strong>locação de vans</strong>.</p>
-                                <p>E-mail: conceicao.flauzino@hotmail.com<br />R$: 50,00 por pessoa (Valores pagos diretamente a empresa)</p>
+                                <p>E-mail: conceicaoflauzino@hotmail.com<br />R$: 50,00 por pessoa (Valores pagos diretamente a empresa)</p>
                                 <p><strong>Valet no local</strong> (cortesia dos noivos) <br /> <strong>Pedágio</strong>: R$2,70 (nos dois sentidos)</p>
                             </div>
                     	</div>
@@ -294,6 +294,7 @@
                                 <p>Para quem deseja se acomodar na cidade de <strong>Santa Isabel</strong>, indicamos o seguinte hotel:</p>
                                 <p><a href="http://estanciasantaisabel.com.br/" target="_blank" >Estância Santa Isabel</a></p>
                                 <p>Tempo da <strong>Fazenda 7 Lagoas</strong>: ~ 10 min - 4km <br />
+                                <p>(Falar com Juliana ou Larissa sobre o casamento. Diária por R$90 p/ pessoa)</p>
                                 Clique <a href="https://goo.gl/maps/Cj9bo" target="_blank">aqui</a> para ver o mapa</p>
                             </div>
                         </div>
@@ -445,7 +446,7 @@
                 </div><!-- END TITLE -->    
 
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="box animation fadeInLeft">
                             <div>
                                 <span class="glyphicon glyphicon-gift box_icon"></span>
@@ -457,7 +458,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                         <div class="box animation fadeInLeft">
                             <div>
                                 <span class="glyphicon glyphicon-gift box_icon"></span>
@@ -465,12 +466,10 @@
                             </div>
                             <div class="box_text">
                                 <p>Clique <a href="http://www.pontofrio.com.br/Site/ListaGerenciadaLandingPage.aspx?idListaCompra=392506" target="_blank">aqui</a> para acessar diretamente nossa lista de presentes no <strong>Ponto Frio</strong></p>
-                                <p><strong>Ou então</strong></p>
-                                <p>Acesse o site do <a href="http://www.pontofrio.com.br/lista-de-casamento/home.aspx?icid=111550" target="_blank">Ponto Frio</a> e procure por Jéssica e Rafael na sessão de lista de casamento.
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+<!--                    <div class="col-md-4">
                         <div class="box animation fadeInLeft">
                             <div>
                                 <span class="glyphicon glyphicon-gift box_icon"></span>
@@ -483,6 +482,7 @@
                             </div>
                         </div>
                     </div>
+-->                    
                     
                 </div>
                 <div class="row"><br /></div>
