Alterando o nome do contato

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                 <p>Para quem deseja se acomodar na cidade de <strong>Santa Isabel</strong>, indicamos o seguinte hotel:</p>
                                 <p><a href="http://estanciasantaisabel.com.br/" target="_blank" >Estância Santa Isabel</a></p>
                                 <p>Tempo da <strong>Fazenda 7 Lagoas</strong>: ~ 10 min - 4km <br />
-                                <p>(Falar com Juliana ou Larissa sobre o casamento. Diária por R$90 p/ pessoa)</p>
+                                <p>(Falar com Fernanda ou Larissa sobre o casamento. Diária por R$90 p/ pessoa)</p>
                                 Clique <a href="https://goo.gl/maps/Cj9bo" target="_blank">aqui</a> para ver o mapa</p>
                             </div>
                         </div>
